034 - Created theme changer

--- a/content/projetos/markdown3.mdx
+++ b/content/projetos/markdown3.mdx
@@ -1,8 +1,12 @@
 ---
 title: "Markdown 3 [JUST A TEST]"
-description: "Version 3 already! This major version contains a couple small changes. For most folks, updating Node.js and plugins is all that’s needed!"
+description: "Version 3 already! This major version contains a couple small changes. For most folks, updating Node.js and plugins is all that's needed!"
 date: "2025-04-26"
-coverImage: "/assets/images/projects/mdx.png"
+coverImage:
+  {
+    light: "/projects/markdown3/mdx-light.png",
+    dark: "/projects/markdown3/mdx-dark.png",
+  }
 tags: ["Next.js", "TailwindCSS", "MDX"]
 ---
 
